# STM32F4-LED-BLINK

./: Cargo.toml  Embed.toml  README.md  build.rs  stm32f410.svd.svd
.cargo/: config.toml
Notes/: Challenge-Register.md  OpenOCD-GDB-Setup.md
src/: main.rs
